# smart_ass_back

./: .env.example  .envrc  .gitignore  Containerfile  README.md  configuration.nix  default  docker-compose.yaml  flake.nix  justfile  requirements.txt  shell.nix
app/: main.py
app/agents/: emotion_agent.py  intent_agent.py  knowledge_agent.py  qa_agent.py
app/core/: config.py  orchestrator.py
app/data/: articles_b2c.json  knowledge_base.py
app/models/: schemas.py
app/services/: llm_service.py  vector_db.py
backend/: .gitignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/agents/: action_agent.py  emotion_agent.py  intent_agent.py  knowledge_agent.py  qa_agent.py  summary_agent.py
backend/app/api/routers/: customers.py  process.py
backend/app/core/: config.py  orchestrator.py  state.py
backend/app/data/: knowledge_base.py
backend/app/models/: schemas.py
backend/app/services/: llm_service.py  vector_db.py
backend/app/utils/: logger.py
backend/docs/: api_reference.md
frontend/: Dockerfile  README.md  chats.json  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: apiBase.js
frontend/src/assets/: main.css
frontend/src/components/: AgentHelp.vue  ChatItem.vue  ChatSidebar.vue  ChatWindow.vue  ClientInfo.vue  OperatorInterface.vue
frontend/src/store/: userStore.js
nix/: configuration.nix  hw-config.nix  shell.nix  user_password.age
