[project]
name = "backend"
version = "0.1.0"
description = "MTS hackathon project"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100.0,<0.111.0",
    "uvicorn[standard]>=0.20.0,<0.24.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "aiohttp>=3.8.0,<4.0.0",
    "qdrant-client>=1.3.0,<2.0.0",
    "loguru>=0.7.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0,<8.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
]
